add description to stats

--- a/push-server/static/index.html
+++ b/push-server/static/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
+	<meta charset="UTF-8">
 	<head>
-		<title>Welcome</title>
+		<title>长连接系统</title>
 	</head>
 	<body>
-		<p><a href="/stats">stats</a></p>
-		<p><a href="/push">push test</a></p>
+		<p><a href="/stats">通知栏推送统计</a></p>
+		<p><a href="/push">push测试</a></p>
+
 	</body>
 </html>
