--- a/push-server/static/stats/index.html
+++ b/push-server/static/stats/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
+<meta charset="UTF-8">
 <head>
     <title>Statistics</title>
 </head>
 <body>
-<div style="width:30%">
+<div style="width:30%;padding: 25px;">
+    <br/>
     <div>
         数据展示为最近7天,图表精度1个小时<br/>
         total = 服务端对连接的客户端发送通知栏消息总数<br/>
@@ -13,6 +15,8 @@
         average latency = sum(latency) / success<br/>
         success rate = success/total<br/>
     </div>
+    <br/>
+    <br/>
     <div>
         Total Count: <span id="totalCount">0</span><br/>
         Success Rate(percent): <span id="successRate">0</span><br/>
