--- a/push-server/static/push/index.html
+++ b/push-server/static/push/index.html
@@ -86,7 +86,7 @@
             <td width="100"><input name="type" type="radio" value="pushAll" onchange = "change();"/>pushAll</td>
         </tr>
 
-        <form action ="http://172.26.66.48:9102/api/notification" method="post" onsubmit="return validate_form()" id="myForm">
+        <form action ="/api/notification" method="post" onsubmit="return validate_form()" id="myForm">
             <tr align=left id="pushIdDiv">
                 <div id = "pushIdText">
                     <td width="100" align=right>pushId: &nbsp&nbsp&nbsp</td>
