--- a/push-server/static/push/index.html
+++ b/push-server/static/push/index.html
@@ -190,7 +190,7 @@
             $.ajax({
                 type: "POST",
                 dataType: "jsonp",
-                url: "http://172.26.66.48:9102/api/notification",
+                url: "/api/notification",
                 data: $("#myForm").serialize(),
                 success: function(msg){
                     alert(msg);
