--- a/push-server/static/index.html
+++ b/push-server/static/index.html
@@ -7,6 +7,6 @@
 	<body>
 		<p><a href="/stats?key=notification">通知栏推送统计</a></p>
 		<p><a href="/push">push测试</a></p>
-
+		<p><a href="/uid">addUid</a></p>
 	</body>
 </html>
